tiff: Add a gegl:tiff-save operation
New GIO based TIFF file saver using libtiff. Operation will try to
preserve the original buffer's data as much as possible, avoiding
conversions. Based on GIMP's file-tiff-save plugin.

https://bugzilla.gnome.org/show_bug.cgi?id=739124

--- a/operations/external/Makefile.am
+++ b/operations/external/Makefile.am
@@ -134,6 +134,11 @@ ops += tiff-load.la
 tiff_load_la_SOURCES = tiff-load.c
 tiff_load_la_LIBADD = $(op_libs) $(TIFF_LIBS)
 tiff_load_la_CFLAGS = $(AM_CFLAGS) $(TIFF_CFLAGS)
+
+ops += tiff-save.la
+tiff_save_la_SOURCES = tiff-save.c
+tiff_save_la_LIBADD = $(op_libs) $(TIFF_LIBS)
+tiff_save_la_CFLAGS = $(AM_CFLAGS) $(TIFF_CFLAGS)
 endif
 
 if HAVE_WEBP
