--- a/tests/python/Makefile.am
+++ b/tests/python/Makefile.am
@@ -1,4 +1,4 @@
-if INTROSPECTION_PYTHON_TESTS_WORK
+
 if HAVE_PYTHON
 if HAVE_INTROSPECTION
 if HAVE_PYGOBJECT
@@ -12,14 +12,13 @@ TESTS = \
 
 EXTRA_DIST = $(TESTS)
 
-check-TESTS: $(TESTS)
-	LD_LIBRARY_PATH=$(top_builddir)/gegl/.libs:$(LD_LIBRARY_PATH) \
-	GI_TYPELIB_PATH=$(top_builddir)/gegl:$(GI_TYPELIB_PATH) \
-	$(PYTHON) $(srcdir)/../run-tests.py \
-	  --build-dir=$(top_builddir) --src-dir=$(top_srcdir) \
-	  $(TESTS)
+#check-TESTS: $(TESTS)
+#	LD_LIBRARY_PATH=$(top_builddir)/gegl/.libs:$(LD_LIBRARY_PATH) \
+#	GI_TYPELIB_PATH=$(top_builddir)/gegl:$(GI_TYPELIB_PATH) \
+#	$(PYTHON) $(srcdir)/../run-tests.py \
+#	  --build-dir=$(top_builddir) --src-dir=$(top_srcdir) \
+#	  $(TESTS)
 
 endif # HAVE_PYGOBJECT
 endif # HAVE_INTROSPECTION
 endif # HAVE_PYTHON
-endif # INTROSPECTION_PYTHON_TESTS_WORK
