python-tests: third time lucky?

--- a/tests/python/Makefile.am
+++ b/tests/python/Makefile.am
@@ -12,12 +12,12 @@ TESTS = \
 
 EXTRA_DIST = $(TESTS)
 
-#check-TESTS: $(TESTS)
-#	LD_LIBRARY_PATH=$(top_builddir)/gegl/.libs:$(LD_LIBRARY_PATH) \
-#	GI_TYPELIB_PATH=$(top_builddir)/gegl:$(GI_TYPELIB_PATH) \
-#	$(PYTHON) $(srcdir)/../run-tests.py \
-#	  --build-dir=$(top_builddir) --src-dir=$(top_srcdir) \
-#	  $(TESTS)
+check-TESTS: $(TESTS)
+	LD_LIBRARY_PATH=$(top_builddir)/gegl/.libs:$(LD_LIBRARY_PATH) \
+	GI_TYPELIB_PATH=$(top_builddir)/gegl:$(GI_TYPELIB_PATH) \
+	$(PYTHON) $(srcdir)/../run-tests.py \
+	  --build-dir=$(top_builddir) --src-dir=$(top_srcdir) \
+	  $(TESTS)
 
 endif # HAVE_PYGOBJECT
 endif # HAVE_INTROSPECTION
