algorithms: implement a bilinear alternative to boxfilter

--- a/gegl/Makefile.am
+++ b/gegl/Makefile.am
@@ -119,7 +119,7 @@ GEGL_sources = \
 	gegl-types-internal.h		\
 	gegl-xml.h
 
-EXTRA_DIST = gegl-algorithms-boxfilter.inc gegl-algorithms-2x2-downscale.inc
+EXTRA_DIST = gegl-algorithms-boxfilter.inc gegl-algorithms-2x2-downscale.inc gegl-algorithms-bilinear.inc
 
 lib_LTLIBRARIES = libgegl-@GEGL_API_VERSION@.la
 
