POTFILES: add tiff-load.c

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -166,6 +166,7 @@ operations/external/save-pixbuf.c
 operations/external/sdl-display.c
 operations/external/svg-load.c
 operations/external/text.c
+operations/external/tiff-load.c
 operations/external/v4l.c
 operations/external/vector-fill.c
 operations/external/vector-stroke.c
