tools: do not use 'git grep' to locate the source files
git grep will not work in a release tarball, use standard grep
instead and do the grep in the TOP_SRCDIR.

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -5,6 +5,7 @@ EXTRA_DIST = \
 	gobj2dot.rb
 
 AM_CPPFLAGS = \
+	-DTOP_SRCDIR=\"$(top_srcdir)\" \
 	-I$(top_srcdir) \
 	-I$(top_builddir)/gegl \
 	-I$(top_srcdir)/gegl \
