tests: dist tiff test data

--- a/tests/compositions/data/Makefile.am
+++ b/tests/compositions/data/Makefile.am
@@ -1,5 +1,6 @@
 EXTRA_DIST=$(wildcard $(srcdir)/*.png) \
            $(wildcard $(srcdir)/*.jpg) \
+           $(wildcard $(srcdir)/*.tif) \
            $(wildcard $(srcdir)/*.jp2) \
            $(wildcard $(srcdir)/*.hdr) \
            $(wildcard $(srcdir)/*.pnm)
