Fix underlinking (-lm) of libgegl.so
When linking with ld.gold the builds fails due to underlinking of libgegl.so
./.libs/libgegl-0.3.so: error: undefined reference to 'tanhf'

Gnome-Bugs: https://bugzilla.gnome.org/show_bug.cgi?id=759065

Signed-off-by: Justin Lecher <jlec@gentoo.org>

--- a/gegl/Makefile.am
+++ b/gegl/Makefile.am
@@ -39,7 +39,7 @@ AM_LDFLAGS = \
 	$(no_undefined) -export-dynamic -version-info $(GEGL_LIBRARY_VERSION)
 
 LIBS = \
-	$(DEP_LIBS) $(BABL_LIBS)
+	$(DEP_LIBS) $(BABL_LIBS) -lm
 
 GEGL_publicdir = $(includedir)/gegl-$(GEGL_API_VERSION)
 
