perf: Test gegl:translate fast paths
A "R'G'B' u8" buffer nicely demonstrates all the aspects of the fast
paths - the buffer shifting trick and avoiding Babl format conversions.
eg., on a Intel Core i7 it gives a throughput of more than 8000 MB/s,
and if (needless) Babl conversions are introduced it drops to 1300 to
1400 MB/s.

On the other hand, a "RGBA float" buffer always performs at 1200 to
1300 MB/s, whether we avoid the Babl conversions or not. Presumably,
this is because converting "RGBA float" pixels to "RaGaBaA float" is
as fast as a NOP.

(The general fall in performance of "RGBA float" buffers is simply
because they have more bytes than their "R'G'B' u8" counterparts.)

https://bugzilla.gnome.org/show_bug.cgi?id=759616

--- a/perf/Makefile.am
+++ b/perf/Makefile.am
@@ -7,7 +7,8 @@ noinst_PROGRAMS = \
 	test-bcontrast-4x \
 	test-gegl-buffer-access \
 	test-samplers \
-	test-rotate
+	test-rotate \
+	test-translate
 
 AM_CPPFLAGS = \
 	-I$(top_srcdir)/ \
@@ -34,6 +35,7 @@ check:
 	for a in $(noinst_PROGRAMS);do GEGL_PATH=../operations ./$$a;done;true
 
 test_rotate_SOURCES = test-rotate.c
+test_translate_SOURCES = test-translate.c
 test_blur_SOURCES = test-blur.c
 test_bcontrast_SOURCES = test-bcontrast.c
 test_bcontrast_minichunk_SOURCES = test-bcontrast-minichunk.c
