perf: Test gegl:scale-ratio performance
https://bugzilla.gnome.org/show_bug.cgi?id=759923

--- a/perf/Makefile.am
+++ b/perf/Makefile.am
@@ -8,6 +8,7 @@ noinst_PROGRAMS = \
 	test-gegl-buffer-access \
 	test-samplers \
 	test-rotate \
+	test-scale \
 	test-translate
 
 AM_CPPFLAGS = \
@@ -35,6 +36,7 @@ check:
 	for a in $(noinst_PROGRAMS);do GEGL_PATH=../operations ./$$a;done;true
 
 test_rotate_SOURCES = test-rotate.c
+test_scale_SOURCES = test-scale.c
 test_translate_SOURCES = test-translate.c
 test_blur_SOURCES = test-blur.c
 test_bcontrast_SOURCES = test-bcontrast.c
