handlers: Allow registration of operations by MIME type
Allow registration of MIME types in handlers db, along with
filename extensions. Move code to gegl-operation-handlers.c as
db and calls are not dedicated to filename extensions anymore.
Old gegl_extension_handler_* functions are kept around in order
to avoid API breakage, marked as deprecated.

https://bugzilla.gnome.org/show_bug.cgi?id=760493

--- a/gegl/operation/Makefile.am
+++ b/gegl/operation/Makefile.am
@@ -27,6 +27,7 @@ liboperation_public_HEADERS = \
 	gegl-operation-composer3.h     	 \
 	gegl-operation-context.h         \
 	gegl-operation-filter.h       	 \
+	gegl-operation-handlers.h        \
 	gegl-operation-meta.h       	 \
 	gegl-operation-meta-json.h       \
 	gegl-operation-point-composer.h  \
@@ -40,12 +41,13 @@ liboperation_public_HEADERS = \
 
 liboperation_sources = \
 	gegl-extension-handler.c		\
-	gegl-extension-handler-private.h \
 	gegl-operation.c			\
 	gegl-operation-area-filter.c		\
 	gegl-operation-composer.c		\
 	gegl-operation-composer3.c		\
 	gegl-operation-filter.c			\
+	gegl-operation-handlers.c		\
+	gegl-operation-handlers-private.h	\
 	gegl-operation-meta.c			\
 	gegl-operation-meta-json.c			\
 	gegl-operation-point-composer.c		\
