perf: add initialization test

--- a/perf/Makefile.am
+++ b/perf/Makefile.am
@@ -5,6 +5,7 @@ noinst_PROGRAMS = \
 	test-bcontrast-minichunk \
 	test-unsharpmask \
 	test-bcontrast-4x \
+	test-init \
 	test-gegl-buffer-access \
 	test-samplers \
 	test-rotate \
@@ -44,6 +45,7 @@ test_blur_SOURCES = test-blur.c
 test_bcontrast_SOURCES = test-bcontrast.c
 test_bcontrast_minichunk_SOURCES = test-bcontrast-minichunk.c
 test_bcontrast_4x_SOURCES = test-bcontrast-4x.c
+test_init_SOURCES = test-init.c
 test_unsharpmask_SOURCES = test-unsharpmask.c
 test_gegl_buffer_access_SOURCES = test-gegl-buffer-access.c
 test_samplers_SOURCES = test-samplers.c
