Rename insta-curve and insta-filter to retro-curve and retro-filter
This leaves the door open for adding effects that are not inspired by
Instagram, and distances us further from any possible trademark issues.

https://bugzilla.gnome.org/show_bug.cgi?id=743681

--- a/operations/workshop/Makefile.am
+++ b/operations/workshop/Makefile.am
@@ -20,12 +20,12 @@ op_LTLIBRARIES =    \
 	ditto.la \
 	hstack.la \
 	ink-simulator.la \
-	insta-curve.la \
-	insta-filter.la \
 	kuwahara.la \
 	mandelbrot.la \
 	median-blur.la \
 	rawbayer-load.la \
+	retro-curve.la \
+	retro-filter.la \
 	rgb-clip.la \
 	unpremul.la \
 	gradient-map.la
