gegl_create_chain: move into library

--- a/gegl/Makefile.am
+++ b/gegl/Makefile.am
@@ -97,6 +97,7 @@ GEGL_sources = \
 	gegl-xml.c			\
 	gegl-gio.c			\
 	gegl-random.c			\
+	gegl-serialize.c		\
 	gegl-matrix.c			\
 	\
 	gegl-algorithms.h \
