--- a/operations/Makefile-common.am
+++ b/operations/Makefile-common.am
@@ -4,7 +4,7 @@ endif
 
 libgegl = $(top_builddir)/gegl/libgegl-$(GEGL_API_VERSION).la
 
-op_libs = $(DEP_LIBS) $(BABL_LIBS) $(libgegl)
+op_libs = $(DEP_LIBS) $(BABL_LIBS) 
 
 AM_CPPFLAGS = \
 	-I$(top_builddir) \
