configure: let luajit satisfy the lua dependency

--- a/configure.ac
+++ b/configure.ac
@@ -1007,7 +1007,8 @@ PKG_CHECK_MODULES(LUA, lua >= lua_required_version,
   have_lua="yes",
   [PKG_CHECK_MODULES(LUA, lua5.1 >= lua_required_version,
      have_lua="yes",
-     have_lua="no  (usable lua not found)")])
+     [PKG_CHECK_MODULES(LUA, luajit >= 2.0.4,
+     have_lua="no  (usable lua not found)")])])
 fi
 
 AM_CONDITIONAL(HAVE_LUA, test "$have_lua" = "yes")
