operations: mv common/load.c core/load.c

--- a/operations/core/Makefile.am
+++ b/operations/core/Makefile.am
@@ -10,6 +10,7 @@ LIBS = $(op_libs)
 opdir = $(ext_dir)
 op_LTLIBRARIES = \
 	cache.la \
+	load.la \
 	clone.la \
 	cast-format.la \
 	convert-format.la \
