ops: bundle many ops in fewer .sos

--- a/operations/common/Makefile.am
+++ b/operations/common/Makefile.am
@@ -6,144 +6,153 @@ EXTRA_DIST = $(wildcard $(srcdir)/*.h)
 
 BUILT_SOURCES = $(subst .c,.c.h,$(wildcard $(srcdir)/*.c))
 
-AM_CPPFLAGS += -I$(srcdir) 
+AM_CPPFLAGS += -I$(srcdir)
+AM_CFLAGS +=  -DGEGL_OP_BUNDLE
 
 LIBS = $(op_libs)
 
+
 opdir = $(ext_dir)
 op_LTLIBRARIES = \
-	alien-map.la \
-	antialias.la \
-	apply-lens.la \
-	bilateral-filter-fast.la \
-	bilateral-filter.la \
-	box-blur.la \
-	brightness-contrast.la \
-	buffer-sink.la \
-	buffer-source.la \
-	bump-map.la \
-	c2g.la \
-	cartoon.la \
-	channel-mixer.la \
-	checkerboard.la \
-	color-enhance.la \
-	color-exchange.la \
-	color-reduction.la \
-	color-rotate.la \
-	color-temperature.la \
-	color-to-alpha.la \
-	color.la \
-	contrast-curve.la \
-	convolution-matrix.la \
-	copy-buffer.la \
-	cubism.la \
-	deinterlace.la \
-	difference-of-gaussians.la \
-	diffraction-patterns.la \
-	displace.la \
-	display.la \
-	distance-transform.la \
-	dropshadow.la \
-	edge.la \
-	edge-laplace.la \
-	edge-sobel.la \
-	emboss.la \
-	engrave.la \
-	exp-combine.la \
-	exposure.la \
-	fattal02.la \
-	fractal-explorer.la \
-	fractal-trace.la \
-	gaussian-blur.la \
-	gaussian-blur-iir.la \
-	gaussian-blur-selective.la \
-	gblur-1d.la \
-	gegl-buffer-load-op.la \
-	gegl-buffer-save-op.la \
-	gegl.la \
-	grey.la \
-	grid.la \
-	high-pass.la \
-	illusion.la \
-	image-compare.la \
-	introspect.la \
-	invert-gamma.la \
-	invert-linear.la \
-	layer.la \
-	lens-distortion.la \
-	lens-flare.la \
-	levels.la \
-	linear-gradient.la \
-	magick-load.la \
-	mantiuk06.la \
-	map-absolute.la \
-	map-relative.la \
-	matting-global.la \
-	maze.la \
-	mblur.la \
-	mirrors.la \
-	mono-mixer.la \
-	mosaic.la \
-	motion-blur-circular.la \
-	motion-blur-linear.la \
-	motion-blur-zoom.la \
-	noise-cie-lch.la \
-	noise-hsv.la \
-	noise-hurl.la \
-	noise-perlin.la \
-	noise-pick.la \
-	noise-reduction.la \
-	noise-rgb.la \
-	noise-simplex.la \
-	noise-slur.la \
-	noise-solid.la \
-	noise-spread.la \
-	noise-cell.la \
-	oilify.la \
-	opacity.la \
-	open-buffer.la \
-	over.la \
-	panorama-projection.la \
-	photocopy.la \
-	pixelize.la \
-	plasma.la \
-	polar-coordinates.la \
-	posterize.la \
-	radial-gradient.la \
-	rectangle.la \
-	red-eye-removal.la \
-	reinhard05.la \
-	remap.la \
-	ripple.la \
-	saturation.la \
-	save.la \
-	sepia.la \
-	shift.la \
-	sinus.la \
-	snn-mean.la \
-	softglow.la \
-	stress.la \
-	stretch-contrast-hsv.la \
-	stretch-contrast.la \
-	supernova.la \
-	svg-huerotate.la \
-	svg-luminancetoalpha.la \
-	svg-matrix.la \
-	svg-saturate.la \
-	texturize-canvas.la \
-	threshold.la \
-	tile.la \
-	tile-glass.la \
-	tile-paper.la \
-	tile-seamless.la \
-	unsharp-mask.la \
-	value-invert.la \
-	value-propagate.la \
-	video-degradation.la \
-	vignette.la \
-	warp.la \
-	waves.la \
-	weighted-blend.la \
-	whirl-pinch.la \
-	wind.la \
-	write-buffer.la
+	gegl-common.la 
+    
+gegl_common_la_SOURCES =\
+    alien-map.c \
+    module.c \
+	antialias.c \
+	apply-lens.c \
+	bilateral-filter-fast.c \
+	bilateral-filter.c \
+	box-blur.c \
+	brightness-contrast.c \
+	buffer-sink.c \
+	buffer-source.c \
+	bump-map.c \
+	c2g.c \
+	cartoon.c \
+	channel-mixer.c \
+	checkerboard.c \
+	color-enhance.c \
+	color-exchange.c \
+	color-reduction.c \
+	color-rotate.c \
+	color-temperature.c \
+	color-to-alpha.c \
+	color.c \
+	contrast-curve.c \
+	convolution-matrix.c \
+	copy-buffer.c \
+	cubism.c \
+	deinterlace.c \
+	difference-of-gaussians.c \
+	diffraction-patterns.c \
+	displace.c \
+	display.c \
+	distance-transform.c \
+	dropshadow.c \
+	edge.c \
+	edge-laplace.c \
+	edge-sobel.c \
+	emboss.c \
+	engrave.c \
+	exp-combine.c \
+	exposure.c \
+	fattal02.c \
+	fractal-explorer.c \
+	fractal-trace.c \
+	gaussian-blur.c \
+	gaussian-blur-iir.c \
+	gaussian-blur-selective.c \
+	gblur-1d.c \
+	gegl-buffer-load-op.c \
+	gegl-buffer-save-op.c \
+	gegl.c \
+	grey.c \
+	grid.c \
+	high-pass.c \
+	illusion.c \
+	image-compare.c \
+	introspect.c \
+	invert-gamma.c \
+	invert-linear.c \
+	layer.c \
+	lens-distortion.c \
+	lens-flare.c \
+	levels.c \
+	linear-gradient.c \
+	magick-load.c \
+	mantiuk06.c \
+	map-absolute.c \
+	map-relative.c \
+	matting-global.c \
+	maze.c \
+	mblur.c \
+	mirrors.c \
+	mono-mixer.c \
+	mosaic.c \
+	motion-blur-circular.c \
+	motion-blur-linear.c \
+	motion-blur-zoom.c \
+	noise-cie-lch.c \
+	noise-hsv.c \
+	noise-hurl.c \
+	noise-perlin.c \
+	noise-pick.c \
+	noise-reduction.c \
+	noise-rgb.c \
+	noise-simplex.c \
+	noise-slur.c \
+	noise-solid.c \
+	noise-spread.c \
+	noise-cell.c \
+	oilify.c \
+	opacity.c \
+	open-buffer.c \
+	over.c \
+	panorama-projection.c \
+	photocopy.c \
+	pixelize.c \
+	plasma.c \
+	polar-coordinates.c \
+	posterize.c \
+	radial-gradient.c \
+	rectangle.c \
+	red-eye-removal.c \
+	reinhard05.c \
+	remap.c \
+	ripple.c \
+	saturation.c \
+	save.c \
+	sepia.c \
+	shift.c \
+	sinus.c \
+	snn-mean.c \
+	softglow.c \
+	stress.c \
+	stretch-contrast-hsv.c \
+	stretch-contrast.c \
+	supernova.c \
+	svg-huerotate.c \
+	svg-luminancetoalpha.c \
+	svg-matrix.c \
+	svg-saturate.c \
+	texturize-canvas.c \
+	threshold.c \
+	tile.c \
+	tile-glass.c \
+	tile-paper.c \
+	tile-seamless.c \
+	unsharp-mask.c \
+	value-invert.c \
+	value-propagate.c \
+	video-degradation.c \
+	vignette.c \
+	warp.c \
+	waves.c \
+	weighted-blend.c \
+	whirl-pinch.c \
+	wind.c \
+	write-buffer.c
+
+module.c: $(gegl_common_la_SOURCES)
+	$(top_srcdir)/tools/gen-loader.sh > module.c
