operations, tools: module.c not properly generated in VPATH builds.
None of the core, common and generated operations were registered inside
respective `common.c` when `gen-loader.sh` was not run from inside the
directory with all the source files. Such build case typically happens
on VPATH builds.

--- a/operations/common/Makefile.am
+++ b/operations/common/Makefile.am
@@ -155,4 +155,4 @@ gegl_common_la_SOURCES =\
 	write-buffer.c
 
 module.c: $(gegl_common_la_SOURCES)
-	$(top_srcdir)/tools/gen-loader.sh > module.c
+	$(top_srcdir)/tools/gen-loader.sh $^ > module.c
