workshop: repair breakage of Makefile.am

--- a/operations/workshop/Makefile.am
+++ b/operations/workshop/Makefile.am
@@ -1,3 +1,18 @@
+SUBDIRS = generated external
+
+include $(top_srcdir)/operations/Makefile-common.am
+
+EXTRA_DIST = $(wildcard $(srcdir)/*.h)
+
+BUILT_SOURCES = $(subst .c,.c.h,$(wildcard $(srcdir)/*.c))
+
+AM_CPPFLAGS += -I$(srcdir)
+
+LIBS = $(op_libs)
+
+opdir = $(ext_dir)
+op_LTLIBRARIES =    \
+	component-extract.la \
 	demosaic-bimedian.la \
 	demosaic-simple.la \
 	ditto.la \
