workshop: add mirectas wavelet blur op
From this repo https://github.com/mirecta/wavelet-blur-gegl

--- a/operations/workshop/Makefile.am
+++ b/operations/workshop/Makefile.am
@@ -16,6 +16,7 @@ op_LTLIBRARIES =    \
 	demosaic-bimedian.la \
 	demosaic-simple.la \
 	ditto.la \
+	gradient-map.la \
 	hstack.la \
 	kuwahara.la \
 	mandelbrot.la \
@@ -23,4 +24,5 @@ op_LTLIBRARIES =    \
 	rawbayer-load.la \
 	unpremul.la \
     vhsfix.la \
-	gradient-map.la
+    wavelet-blur.la
+
