workshop: add gegl:image-gradient
Compute gradient magnitude and direction using central differencies

--- a/operations/workshop/Makefile.am
+++ b/operations/workshop/Makefile.am
@@ -18,6 +18,7 @@ op_LTLIBRARIES =    \
 	ditto.la \
 	gradient-map.la \
 	hstack.la \
+	image-gradient.la \
 	kuwahara.la \
 	mandelbrot.la \
 	median-blur.la \
