workshop: add lowbit-dither, experimental dithering for floating point

--- a/operations/workshop/Makefile.am
+++ b/operations/workshop/Makefile.am
@@ -25,6 +25,7 @@ op_LTLIBRARIES =    \
 	rawbayer-load.la \
 	unpremul.la \
     vhsfix.la \
+    lowbit-dither.la \
     waterpixels.la \
     watershed-transform.la \
     wavelet-blur.la
