tests: Bounding box shouldn't be cropped after setting passthrough
https://bugzilla.gnome.org/show_bug.cgi?id=777487

--- a/tests/simple/Makefile.am
+++ b/tests/simple/Makefile.am
@@ -18,6 +18,7 @@ noinst_PROGRAMS =			\
 	test-license-check		\
 	test-misc			\
 	test-node-connections		\
+	test-node-passthrough		\
 	test-node-properties		\
 	test-object-forked		\
 	test-opencl-colors		\
